--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "expense-tracker",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -13,16 +12,19 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "cloudinary": "^1.25.1",
-    "cookie-parser": "^1.4.5",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
+    "config": "^3.3.12",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "^8.6.0",
+    "express": "^4.21.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.1",
+    "mongoose": "^5.13.22",
     "mongoose-paginate-v2": "^1.3.17",
     "socket.io": "^4.0.1"
-  }
+  },
+  "description": ""
 }
